--- a/RPGDiceRoller.css
+++ b/RPGDiceRoller.css
@@ -13,6 +13,7 @@ body {
 
 #picture {
 	height: 700px;
+	width: auto;
 	background-image: url("castle.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
