--- a/RPGDiceRoller.css
+++ b/RPGDiceRoller.css
@@ -11,8 +11,8 @@ body {
 }
 
 #picture {
-	height: 700px;
-	width: auto;
+	height: 800px;
+	width: 800px
 	background-image: url("castle.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
