--- a/RPGDiceRoller.css
+++ b/RPGDiceRoller.css
@@ -2,22 +2,22 @@ body {
 	background-color: #731f1f;
 }
 
+#picture {
+	background-image: url('castle.jpg');
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center;
+	width: 100%;
+	height: 800px;
+	margin: auto;
+}
+
 #pagename {
 	background-color: brown;
 	color: black;
 	font-family: serif;
 	font-weight: bold;
 	text-align: center;
-}
-
-#picture {
-	height: 800px;
-	width: 800px;
-	background-image: url("castle.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
-	margin: auto;
 }
 
 #directions {
@@ -57,4 +57,5 @@ body {
 .flex-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
