--- a/RPGDiceRoller.css
+++ b/RPGDiceRoller.css
@@ -32,6 +32,7 @@ body {
 	font-weight: bold;
 	text-align: center;
 	margin: auto;
+	max-width: 100%;
 }
 
 #directions {
@@ -56,7 +57,7 @@ body {
 	background-color: #565033;
 	text-align: center;
 	font-weight: bold;
-	
+	padding-bottom: 50px;
 }
 
 #rollresult {
