--- a/RPGDiceRoller.css
+++ b/RPGDiceRoller.css
@@ -1,5 +1,6 @@
 body {
 	background-color: #394427;
+	max-width: 100%;
 }
 
 #picture {
@@ -55,6 +56,8 @@ body {
 	background-color: #565033;
 	text-align: center;
 	font-weight: bold;
+	padding-bottom: 50px;
+	max-width: 100%;
 }
 
 #rollresult {
